// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpengraphImage getFonts should return an array of fonts 1`] = `
[
  {
    "data": ArrayBuffer [],
    "name": "Inter",
    "style": "normal",
    "weight": 600,
  },
  {
    "data": ArrayBuffer [],
    "name": "Inter",
    "style": "normal",
    "weight": 700,
  },
  {
    "data": ArrayBuffer [],
    "name": "RobotoMono",
    "style": "normal",
    "weight": 300,
  },
]
`;

exports[`OpengraphImage should match a blog post opengraph 1`] = `
<div>
  <div
    style="background-color: white; width: 100%; height: 100%; display: flex; flex-direction: column; position: relative; font-family: Inter; padding: 60px; justify-content: space-between; background-size: 20px 20px;"
  >
    <div
      style="display: flex; flex-direction: column; justify-content: space-between; flex: 1; margin-bottom: 3rem;"
    >
      <div
        style="display: flex; flex-direction: row; gap: 1em; align-items: center;"
      >
        <img
          height="115"
          src="https://carloscuesta.me/images/carloscuesta.jpg"
          style="border-radius: 100%;"
          width="115"
        />
        <div
          style="display: flex; flex-direction: column;"
        >
          <span
            style="font-weight: 700; font-size: 3em; letter-spacing: -1px;"
          >
            Carlos Cuesta
          </span>
          <span
            style="font-weight: 300; font-size: 1.85em;"
          >
            @crloscuesta
          </span>
        </div>
      </div>
      <div
        style="display: flex; flex-direction: column; gap: 1.25rem;"
      >
        <div
          style="font-size: 4.5rem; font-weight: 700; letter-spacing: -2px; line-height: 1;"
        >
          Writing ADRs
        </div>
        <div
          style="font-size: 2.5rem;"
        >
          This is a test description
        </div>
      </div>
    </div>
    <div
      style="font-size: 1.75rem; line-height: 1; font-weight: 600; font-family: RobotoMono;"
    >
      carloscuesta.me/blog
    </div>
  </div>
</div>
`;

exports[`OpengraphImage should match a page opengraph 1`] = `
<div>
  <div
    style="background-color: white; width: 100%; height: 100%; display: flex; position: relative; font-family: Inter; background-size: 20px 20px;"
  >
    <img
      height="115"
      src="https://carloscuesta.me/images/carloscuesta.jpg"
      style="border-radius: 100%; position: absolute; left: 60px; top: 60px;"
      width="115"
    />
    <div
      style="display: flex; flex-direction: column; gap: 0.5rem; position: absolute; bottom: 140px; left: 60px; width: 65%;"
    >
      <span
        style="font-size: 5.25rem; font-weight: 700; letter-spacing: -2px; line-height: 1;"
      >
        Blog
      </span>
      <span
        style="font-size: 2.5rem; font-weight: 600;"
      >
        This is a test description
      </span>
    </div>
    <div
      style="position: absolute; bottom: 60px; left: 60px; font-size: 1.75rem; line-height: 1; font-weight: 600; border-radius: 100px; font-family: RobotoMono;"
    >
      carloscuesta.me//
    </div>
  </div>
</div>
`;
